--- a/package.json
+++ b/package.json
@@ -24,7 +24,14 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.8.0",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-http": "^1.5.15",
     "core-js": "^2.5.4",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "node": "^10.9.0",
     "npm": "^6.10.2",
     "rxjs": "~6.5.1",
