--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@auth0/angular-jwt": "^3.0.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -31,6 +32,7 @@
     "apollo-client": "^2.6.3",
     "apollo-link-http": "^1.5.15",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "node": "^10.9.0",
